fixed overflow

--- a/client/src/Header/index.css
+++ b/client/src/Header/index.css
@@ -3,13 +3,19 @@
 	height: 3em;
 	line-height: 3em;
 	justify-content: space-between;
-	padding-left: 20px;
 }
 
 #navigation-links{
 	display: flex;
-	margin-right: 40px;
 	height: 100%;
+}
+
+#navigation-links:nth-child(2){
+	margin-right: 20px;
+}
+
+#home-button{
+	margin-left: 20px;
 }
 
 .header-button{
